bdr.BDR2.scala.error
Compilation error:
BDR2:4: error: value lecture is not a member of StringContext
    case lecture"R" => right(); forward()
         ^BDR2:5: error: value lecture is not a member of StringContext
    case lecture"L" => left(); forward()
         ^BDR2:6: error: value lecture is not a member of StringContext
    case lecture"I" => right(); right(); forward()
         ^BDR2:7: error: value lecture is not a member of StringContext
    case lecture"A" => forward()
         ^BDR2:8: error: value lecture is not a member of StringContext
    case lecture"B" => forward(); forward()
         ^BDR2:9: error: value lecture is not a member of StringContext
    case lecture"C" => forward(); forward(); forward()
         ^BDR2:10: error: value lecture is not a member of StringContext
    case lecture"D" => forward(); forward(); forward(); forward()
         ^BDR2:11: error: value lecture is not a member of StringContext
    case lecture"E" => forward(); forward(); forward(); forward(); forward()
         ^BDR2:12: error: value lecture is not a member of StringContext
    case lecture"F" => forward(); forward(); forward(); forward(); forward(); forward()
         ^BDR2:13: error: value lecture is not a member of StringContext
    case lecture"Z" => backdraw()
         ^BDR2:13: error: not found: value backdraw
    case lecture"Z" => backdraw()
                       ^BDR2:14: error: value lecture is not a member of StringContext
    case lecture"Y" => backdraw(); backdraw()
         ^BDR2:14: error: not found: value backdraw
    case lecture"Y" => backdraw(); backdraw()
                       ^BDR2:14: error: not found: value backdraw
    case lecture"Y" => backdraw(); backdraw()
                                   ^BDR2:15: error: value lecture is not a member of StringContext
    case lecture"X" => backdraw(); backdraw(); backdraw()
         ^BDR2:15: error: not found: value backdraw
    case lecture"X" => backdraw(); backdraw(); backdraw()
                       ^BDR2:15: error: not found: value backdraw
    case lecture"X" => backdraw(); backdraw(); backdraw()
                                   ^BDR2:15: error: not found: value backdraw
    case lecture"X" => backdraw(); backdraw(); backdraw()
                                               ^BDR2:16: error: value lecture is not a member of StringContext
    case lecture"W" => backdraw(); backdraw(); backdraw(); backdraw()
         ^BDR2:16: error: not found: value backdraw
    case lecture"W" => backdraw(); backdraw(); backdraw(); backdraw()
                       ^BDR2:16: error: not found: value backdraw
    case lecture"W" => backdraw(); backdraw(); backdraw(); backdraw()
                                   ^BDR2:16: error: not found: value backdraw
    case lecture"W" => backdraw(); backdraw(); backdraw(); backdraw()
                                               ^BDR2:16: error: not found: value backdraw
    case lecture"W" => backdraw(); backdraw(); backdraw(); backdraw()
                                                           ^BDR2:17: error: value lecture is not a member of StringContext
    case lecture"V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
         ^BDR2:17: error: not found: value backdraw
    case lecture"V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                       ^BDR2:17: error: not found: value backdraw
    case lecture"V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                   ^BDR2:17: error: not found: value backdraw
    case lecture"V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                               ^BDR2:17: error: not found: value backdraw
    case lecture"V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                           ^BDR2:17: error: not found: value backdraw
    case lecture"V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                                       ^BDR2:18: error: value lecture is not a member of StringContext
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
         ^BDR2:18: error: not found: value backdraw
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                       ^BDR2:18: error: not found: value backdraw
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                   ^BDR2:18: error: not found: value backdraw
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                               ^BDR2:18: error: not found: value backdraw
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                           ^BDR2:18: error: not found: value backdraw
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                                       ^BDR2:18: error: not found: value backdraw
    case lecture"U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                                                   ^